Fix filetree collapse

--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,9 @@ main {
    ===================== */
 #nav-bar {
     height: 100vh;
-    width: 6vw;
+    width: 60px;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     background-color: var(--tertiary);
     list-style: none;
     display: flex;
@@ -35,11 +35,20 @@ main {
 }
 
 .nav-item {
-    height: 5vh;
-    width: 100%;
-    background-color: green;
+    width: 90%;
+    aspect-ratio: 1;
 }
-#files-btn {}
+
+.nav-item:hover {
+    cursor: pointer;
+}
+
+#open-files-btn {
+    background-image: url('./assets/file.svg');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
 
 /* =====================
    File Tree
@@ -47,26 +56,45 @@ main {
 #filetree {
     background-color: var(--secondary);
     height: 100vh;
-    width: 20vw;
+    width: 200px;
+    transition: width 0.3s ease;
 }
+
+#filetree.closed {
+    width: 0px;
+    overflow: hidden;
+}
+
 #filetree-nav {
     width: 100%;
+    height: 5vh;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     background-color: pink;
     display: flex;
     justify-content: flex-start;
-    align-items: end;
-    height: 5vh;
+    align-items: center;
+    gap: 5px;
     list-style: none;
 }
 .filetree-nav-item {
-    height: 100%;
-    border: 1px solid red;
+    height: 80%;
     aspect-ratio: 1;
 }
-#new-note-btn {}
-#create-folder-btn {}
+
+.filetree-nav-item:hover {
+    cursor: pointer;
+}
+
+#create-note-btn {
+    background-image: url('./assets/file.svg');
+    background-size: contain;
+}
+
+#create-folder-btn {
+    background-image: url('./assets/folder.svg');
+    background-size: contain;
+}
 #files-container {}
 
 /* =====================
@@ -74,8 +102,9 @@ main {
    ===================== */
 #file-display {
     height: 100vh;
-    width: 80vw;
+    width: auto;
     background-color: var(--primary);
+    flex: 1;
 }
 
 #tab-bar {
